Las imagenes de ejemplos de pasteles ahora estan todas del mismo tamanio

--- a/style.css
+++ b/style.css
@@ -398,3 +398,16 @@ code {
      position: relative;
      z-index: 1;
    }
+
+   .grid-2{
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+   }
+
+   .grid-2 img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+    display: block;
+   }
