--- a/style.css
+++ b/style.css
@@ -399,6 +399,26 @@ code {
      z-index: 1;
    }
 
+.nosotros-body{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    flex-wrap: wrap;
+}
+
+.nosotros-text, .nosotros-image{
+  flex: 1;
+  padding: 20px;
+}
+
+.nosotros-image img{
+  max-width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 10px;
+}
+
 .grid-2{
     display:grid;
     grid-template-columns: repeat(3, 1fr);
@@ -408,7 +428,7 @@ code {
 .grid-2 img{
     width: 100%;
     height:100%;
-    object-fit: cover;
+    object-fit: scale-down;
     display: block;
     border-radius: 15px;
 }
