--- a/style.css
+++ b/style.css
@@ -606,6 +606,58 @@ figcaption{
 }
 
 /* ===========================
+  PASOS
+=========================== */
+.wrapper {
+	max-width: 600px;
+	margin: 0 auto;
+}
+
+.list {
+	list-style: none;
+	padding: 0;
+}
+
+.list li::before {
+	counter-increment: list-item;
+	content: counter(list-item);
+	font-size: 2rem;
+	font-weight: 700;
+	width: 2em;
+	height: 2em;
+	background: rgb(255, 255, 255);
+	flex: 0 0 auto;
+	border-radius: 50%;
+	color: rgb(90, 88, 88);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.list li {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	background: rgb(247, 144, 170);
+  font-size: 20px;
+	padding: 1.5rem;
+	border-radius: 1rem;
+	width: calc(100% - 2rem);
+	box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.1);
+}
+
+.list li + li {
+	margin-top: 1rem;
+}
+
+.list li:nth-child(even) {
+	flex-direction: row-reverse;
+	background: rgb(211, 245, 252);
+	margin-right: -2rem;
+	margin-left: 2rem;
+}
+
+/* ===========================
   FOOTER
 =========================== */
    
